# zmq_pipeline

./: README.md  pyproject.toml
examples/: run_demo.py
src/zmq_pipeline/: __init__.py
src/zmq_pipeline/controller/: controller.py  http_server.py  job_registry.py  telemetry.py  ws_server.py  zmq_client.py
src/zmq_pipeline/frontend/templates/: index.html
src/zmq_pipeline/shared/: config.py  protocol.py  serialization.py  telemetry_pub.py
src/zmq_pipeline/sink/: sink.py
src/zmq_pipeline/ventilator/: ventilator.py
src/zmq_pipeline/worker/: worker.py
src/zmq_pipeline/worker/handlers/: base_handler.py  echo_handler.py
tests/: test_config.py  test_integration.py  test_protocol.py  test_serialization.py  test_unit.py
